[package]
name = "tokio-metrics-collector"
version = "0.2.3"
authors = ["Hanaasagi <ambiguous404@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/Hanaasagi/tokio-metrics-collector"
description = """
Provides utilities for collecting Prometheus-compatible metrics from Tokio runtime and tasks.
"""
keywords = ["metrics", "tokio", "prometheus"]
categories = ["development-tools"]

[features]
default = ["rt"]
rt = ["tokio"]

[dependencies]
lazy_static = "1.5.0"
prometheus = "0.13"
tokio-metrics = "0.4"
tokio = { version = "1.43.0", features = ["rt"], optional = true }
parking_lot = "0.12.3"

[dev-dependencies]
axum = "0.8"
tokio = { version = "1.43.0", features = ["rt", "macros", "rt-multi-thread"]}
tracing-subscriber = "0.3.19"

[package.metadata.docs.rs]
all-features = true
# enable unstable features in the documentation
rustdoc-args = ["--cfg", "docsrs", "--cfg", "tokio_unstable"]
# it's necessary to _also_ pass `--cfg tokio_unstable` to rustc, or else
# dependencies will not be enabled, and the docs build will fail.
rustc-args = ["--cfg", "tokio_unstable"]
